--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 /* Container principal */
-.xbox {
+#main-container {
   padding: 0px 20px;
   margin: 20px auto;
   max-width: 1200px;
